--- a/isah_leeromgeving_api_versie1/wwwroot/styles/filldynamic_styles.css
+++ b/isah_leeromgeving_api_versie1/wwwroot/styles/filldynamic_styles.css
@@ -6,6 +6,7 @@
 }
 
 .coursebox {
+    background-color: white;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 1.5px 5px 0 rgba(0, 0, 0, 0.1);
     border: 1px solid;
 }
