--- a/isah_leeromgeving_api_versie1/wwwroot/styles/main_styles.css
+++ b/isah_leeromgeving_api_versie1/wwwroot/styles/main_styles.css
@@ -166,3 +166,19 @@ footer {
     margin: auto;
 }
 /*#endregion footerelements */
+
+/*#region tablerelements */
+table {
+    border-collapse: collapse;
+    width: 50%;
+}
+
+th, td {
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+/*#endregion tablerelements */
